# hydrosim-platform

./: .gitignore  Makefile  README.md  STRUCTURE.md  docker-compose.yml
backend/: .env.example  alembic.ini  debug_k8s.py  fix_password.py  pyproject.toml  requirements.txt  seed_teacher.py  seed_teacher.sql  test_api_connection.py  test_api_v2.py  test_api_v3.py  verify_all_apis.py  verify_import_fix.py  verify_kaniko.py  verify_student.py
backend/.kube/: config
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_24_1426-bc2e40a752f0_add_teachers_students_deployments_tables.py  2025_12_30_1054-f48da294fdf0_add_teacher_role_student_teacher_id_.py  2025_12_31_0007-705f1561b779_add_system_settings_semesters_and_.py  2025_12_31_0015-d5039572a91c_add_student_authentication_fields.py  2025_12_31_0955-ef32523aec99_merge_heads.py  2025_12_31_0956-70959d10c5ef_add_student_domain_settings.py  2026_01_02_1040-0eddd469af3a_add_build_config_and_build_tables.py  2026_01_02_1110-ce409d0a915d_add_build_settings_to_system_settings.py  2026_01_02_1805-7f6a3f2b9c1d_add_deploy_keys_and_build_job_name.py  2026_01_02_1905-4a6b2c1d9f7e_add_deploying_status_to_deployments.py  2026_01_05_0001-1c2d3e4f5a6b_add_student_domain_settings.py
backend/app/: main.py
backend/app/api/: admin_deps.py  auth_deps.py
backend/app/core/: config.py  k8s_build_job.py  k8s_resources.py  naming.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/models/: __init__.py  build.py  registry.py  (+6 more)
backend/tests/: debug_routes.py  test_deploy_logic.py  test_e2e_cluster.py  verify_step6.py
(+140 files in other folders)
